--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
+            <li><a href="./recipes/avocado-egg-toast.html">Avocado Toast and Egg</a></li>
             <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="./recipes/thai-green-curry.html">Thai Green Curry</a></li>
         </ul>
     </body>
 </html>
