--- a/recipes/thai-green-curry.html
+++ b/recipes/thai-green-curry.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Thai Green Curry</title>
+        <link rel="stylesheet" href="recipe.css">
     </head>
     <body>
         <h1>Thai Green Curry</h1>
